<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionVerite">

    <ImageView
        android:id="@+id/purpleImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/ActionButton"
        android:layout_width="146dp"
        android:layout_height="88dp"
        android:layout_marginStart="28dp"
        android:text="@string/ActionButton"
        android:textColor="#BE8AB5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <Button
        android:id="@+id/VeriteButton"
        android:layout_width="146dp"
        android:layout_height="88dp"
        android:text="@string/VeriteButton"
        android:textColor="#BE8AB5"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/ActionButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.86" />

    <TextView
        android:id="@+id/AVuserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:text="@string/AVuserName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/crow"
        app:layout_constraintTop_toTopOf="@+id/purpleImage" />

    <TextView
        android:id="@+id/questionDisplay"
        android:layout_width="251dp"
        android:layout_height="103dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/actor"
        android:text="@string/questionDisplay"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/purpleImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AVuserName" />

    <ImageView
        android:id="@+id/crow"
        android:layout_width="87dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/purpleImage"
        app:srcCompat="@drawable/arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>