<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChoixJeuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="343dp"
        android:layout_height="114dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/title" />

    <Button
        android:id="@+id/buttonGame1"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:layout_marginTop="48dp"
        android:background="#A4FA7470"
        android:fontFamily="@font/actor"
        android:paddingStart="35dp"
        android:text="@string/pmubutton"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/buttonGame2"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:background="#DDC7BAD9"
        android:fontFamily="@font/actor"
        android:paddingStart="35dp"
        android:text="@string/purplebutton"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGame1" />

    <Button
        android:id="@+id/buttonGame3"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:background="#DDF7E2A3"
        android:fontFamily="@font/actor"
        android:paddingStart="35dp"
        android:text="@string/actionbutton"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGame2" />

    <Button
        android:id="@+id/buttonGame4"
        android:layout_width="413dp"
        android:layout_height="75dp"
        android:layout_marginTop="15dp"
        android:background="#9CF7BA7B"
        android:fontFamily="@font/actor"
        android:paddingStart="35dp"
        android:text="@string/jusfruitbutton"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGame3" />

</androidx.constraintlayout.widget.ConstraintLayout>